Fix some overflow, Add first paragraph

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html * {
 
 body {
   color: #000;
-  font-family: "Ubuntu", sans-serif;
+  font: 400 18px/1.5 "Ubuntu", sans-serif;
 }
 main {
   background-color: #000; /*temp*/
@@ -18,10 +18,15 @@ header {
   background: #b8b8b8;
 }
 
-.f-s {
-  font-size: 18px;
-  line-height: 1.5em;
+p {
+  font-size: 26px;
+  line-height: calc(18px*1.5);
   font-weight: 400;
+}
+.f-s {
+  font-size: 22px;
+  line-height: 1.5em;
+  font-weight: 700;
 }
 
 .f-m {
@@ -97,7 +102,7 @@ main {
 #community-links,
 #curated-posts {
   width: 100%;
-  max-width: 1400px;
+  max-width: 2800px;
   margin: 0 auto;
 }
 
@@ -162,17 +167,23 @@ main {
 
 #community-links .col-1-4 {
   width: 100%;
+  background-color: #cacaca;
 }
 #community-links .profile {
   display: grid;
   grid-template-columns: 250px auto;
+  background-color: pink;
 }
 #community-links .col-1-4 .photo {
   background-color: #c7c7c7;
 }
 
 #community-links .col-1-4 .text {
+  padding: 20px;
   background-color: #cbcbcb;
+}
+#community-links .text p {
+  width: 90%;
 }
 
 #community-links [class*="col-"] {
@@ -193,9 +204,10 @@ main {
 }
 
 #curated-posts {
-  /* display: inline-block; */
+  /*display: block;
+  /* display: inline-block;*/
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
@@ -240,54 +252,57 @@ footer {
     width: 50%;
   }
   #latest-posts .col-1 {
-    width: 49%;
+    width: 50%;
   }
   #curated-posts .col-1 {
-    width: 49%;
+    width: 50%;
   }
   #curated-posts .col-1-4 {
-    width: calc(49% * 2);
+    width: calc(50% * 2);
   }
 
   #community-links .col-1 {
-    width: 49%;
+    width: 50%;
   }
 }
 
 @media only screen and (min-width: 1080px) {
   #latest-posts .col-1 {
-    width: 33%;
+    width: 33.3%;
   }
   #latest-posts .col-1-2 {
-    width: 66%;
+    width: 66.6%;
   }
   #curated-posts .col-1 {
-    width: 33%;
+    width: 33.3%;
   }
   #curated-posts .col-1-4 {
-    width: calc(33% * 2);
+    width: calc(33.3% * 2);
+  }
+  #community-links .col-1-4 .text p {
+    width: 70%!important;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   header .box-container div {
-    width: 33%;
+    width: 33.3%;
   }
   #curated-posts .col-1 {
-    width: 24%;
+    width: 25%;
   }
   #curated-posts .col-1-4 {
-    width: calc(24% * 4);
+    width: calc(25% * 4);
   }
 }
 @media only screen and (min-width: 1600px) {
   header .box-container div {
-    width: 24%;
+    width: 25%;
   }
   #latest-posts .col-1 {
-    width: 24%;
+    width: 25%;
   }
   #latest-posts .col-1-2 {
-    width: 49%;
+    width: 50%;
   }
 }
